--- a/my_react/react-teach.html
+++ b/my_react/react-teach.html
@@ -7,9 +7,6 @@
 
   <!--dom相关的功能--咳咳,什么功能???能够渲染出dom???虚拟dom?-->
   <script src="../build/react-dom.js"></script>
-
-  <!--将react的jsx语法转换为js语法, 很需要时间哦,那么放在服务器端去进行~~~ 哈哈,以后用node.js时,那么如何在本地转译后放到服务器上呢~~~-->
-  <!--<script src="../build/browser.min.js"></script>-->
 </head>
 <body>
 
@@ -17,6 +14,6 @@
 <div id="example-arr1"></div>
 <div id="example-arr2"></div>
 
-<script src="build/demo-label.js"> </script>
+<script src="build/react-teach.js"> </script>
 </body>
 </html>
